--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "job-application-email-generator",
+  "name": "templique",
   "private": true,
   "version": "0.0.0",
   "type": "module",
